--- a/20211013230422-kubectl.html
+++ b/20211013230422-kubectl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>kubectl</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       ee377537-0c8d-48c9-a181-19a2cff8c4a7
 </p>
 
-<div id="outline-container-orgdc6dd9b" class="outline-2">
-<h2 id="orgdc6dd9b">Commands</h2>
-<div class="outline-text-2" id="text-orgdc6dd9b">
+<div id="outline-container-org2ebcab1" class="outline-2">
+<h2 id="org2ebcab1">Commands</h2>
+<div class="outline-text-2" id="text-org2ebcab1">
 <ul class="org-ul">
 <li>View cluster information</li>
 </ul>
@@ -270,9 +270,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org8286388" class="outline-3">
-<h3 id="org8286388">Apply &amp; Create</h3>
-<div class="outline-text-3" id="text-org8286388">
+<div id="outline-container-org5bc96b1" class="outline-3">
+<h3 id="org5bc96b1">Apply &amp; Create</h3>
+<div class="outline-text-3" id="text-org5bc96b1">
 <ul class="org-ul">
 <li>Just creates a resource</li>
 </ul>
@@ -293,9 +293,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org76e61fa" class="outline-3">
-<h3 id="org76e61fa">Delete</h3>
-<div class="outline-text-3" id="text-org76e61fa">
+<div id="outline-container-orgd1361f7" class="outline-3">
+<h3 id="orgd1361f7">Delete</h3>
+<div class="outline-text-3" id="text-orgd1361f7">
 <p>
 Deleting a pod won't prevent it from being recreated.
 </p>
@@ -313,9 +313,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-orgacae64d" class="outline-3">
-<h3 id="orgacae64d">Describe</h3>
-<div class="outline-text-3" id="text-orgacae64d">
+<div id="outline-container-org1e4c838" class="outline-3">
+<h3 id="org1e4c838">Describe</h3>
+<div class="outline-text-3" id="text-org1e4c838">
 <div class="org-src-container">
 <pre class="src src-shell">kubectl describe pods &lt;...&gt;
 </pre>
@@ -323,9 +323,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-org5a3a344" class="outline-3">
-<h3 id="org5a3a344">Get</h3>
-<div class="outline-text-3" id="text-org5a3a344">
+<div id="outline-container-orga98e5c8" class="outline-3">
+<h3 id="orga98e5c8">Get</h3>
+<div class="outline-text-3" id="text-orga98e5c8">
 <ul class="org-ul">
 <li>View all the resources</li>
 </ul>
@@ -356,9 +356,9 @@ kubectl get deployment -l app=nginx
 </div>
 </div>
 
-<div id="outline-container-org9d92110" class="outline-3">
-<h3 id="org9d92110">Port-forward</h3>
-<div class="outline-text-3" id="text-org9d92110">
+<div id="outline-container-org904b78b" class="outline-3">
+<h3 id="org904b78b">Port-forward</h3>
+<div class="outline-text-3" id="text-org904b78b">
 <ul class="org-ul">
 <li>Forward port to enables external calls</li>
 </ul>
@@ -372,13 +372,13 @@ kubectl port-forward [pod-name] 8080:80
 </div>
 </div>
 
-<div id="outline-container-org1864614" class="outline-2">
-<h2 id="org1864614">YAML</h2>
-<div class="outline-text-2" id="text-org1864614">
+<div id="outline-container-orgd446e4d" class="outline-2">
+<h2 id="orgd446e4d">YAML</h2>
+<div class="outline-text-2" id="text-orgd446e4d">
 </div>
-<div id="outline-container-orgfd937b7" class="outline-3">
-<h3 id="orgfd937b7">Pod</h3>
-<div class="outline-text-3" id="text-orgfd937b7">
+<div id="outline-container-org5133ea5" class="outline-3">
+<h3 id="org5133ea5">Pod</h3>
+<div class="outline-text-3" id="text-org5133ea5">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Pod
@@ -397,9 +397,9 @@ spec:
 </div>
 </div>
 
-<div id="outline-container-org70e6cb2" class="outline-4">
-<h4 id="org70e6cb2">Pod Healthchecks</h4>
-<div class="outline-text-4" id="text-org70e6cb2">
+<div id="outline-container-org4605dd2" class="outline-4">
+<h4 id="org4605dd2">Pod Healthchecks</h4>
+<div class="outline-text-4" id="text-org4605dd2">
 <ul class="org-ul">
 <li>Probe Types
 <ul class="org-ul">
@@ -457,7 +457,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
