--- a/20211107141903-the_effective_manager.html
+++ b/20211107141903-the_effective_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The-Effective-Manager</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       32b2fe5a-3bc3-439b-a850-70a539498e9e
 </p>
 
-<div id="outline-container-org4665dbb" class="outline-2">
-<h2 id="org4665dbb">Teachable and Sustainable Skills</h2>
-<div class="outline-text-2" id="text-org4665dbb">
+<div id="outline-container-org2b05c45" class="outline-2">
+<h2 id="org2b05c45">Teachable and Sustainable Skills</h2>
+<div class="outline-text-2" id="text-org2b05c45">
 <blockquote>
 <p>
 However you manage, your techniques, behavior, and philosophy must be both
@@ -320,9 +320,9 @@ others. And the effective manager can repeat the
 </div>
 </div>
 
-<div id="outline-container-orgb6735af" class="outline-2">
-<h2 id="orgb6735af">Know Your People: One On Ones</h2>
-<div class="outline-text-2" id="text-orgb6735af">
+<div id="outline-container-org8749c52" class="outline-2">
+<h2 id="org8749c52">Know Your People: One On Ones</h2>
+<div class="outline-text-2" id="text-org8749c52">
 <p>
 One on ones are meetings that:
 </p>
@@ -337,9 +337,9 @@ One on ones are meetings that:
 </ol>
 </div>
 
-<div id="outline-container-org3de5d7a" class="outline-3">
-<h3 id="org3de5d7a">Scheduling</h3>
-<div class="outline-text-3" id="text-org3de5d7a">
+<div id="outline-container-orgcb7d857" class="outline-3">
+<h3 id="orgcb7d857">Scheduling</h3>
+<div class="outline-text-3" id="text-orgcb7d857">
 <blockquote>
 <p>
 Scheduling your O3s is actually more important than having them weekly. That's
@@ -378,9 +378,9 @@ manager: your time. Build an organization of effective managers
 </div>
 </div>
 
-<div id="outline-container-org554e43c" class="outline-2">
-<h2 id="org554e43c">Talk about performance - Feedback</h2>
-<div class="outline-text-2" id="text-org554e43c">
+<div id="outline-container-org8bef0f7" class="outline-2">
+<h2 id="org8bef0f7">Talk about performance - Feedback</h2>
+<div class="outline-text-2" id="text-org8bef0f7">
 <blockquote>
 <p>
 The second critical manager behavior that leads to results and retention is
@@ -406,9 +406,9 @@ Their defensiveness, then, should not be surprising.
 </blockquote>
 </div>
 
-<div id="outline-container-orgeeaffe7" class="outline-3">
-<h3 id="orgeeaffe7">Encourage Effective Future Behavior</h3>
-<div class="outline-text-3" id="text-orgeeaffe7">
+<div id="outline-container-org12d8022" class="outline-3">
+<h3 id="org12d8022">Encourage Effective Future Behavior</h3>
+<div class="outline-text-3" id="text-org12d8022">
 <blockquote>
 <p>
 The moment you switch to a future focus, however, you free yourself up to focus
@@ -503,9 +503,9 @@ forgiven it. Remember that our focus is on the future, not the past</b>.
 </div>
 </div>
 
-<div id="outline-container-org8b67ac3" class="outline-3">
-<h3 id="org8b67ac3">When should I give feedback</h3>
-<div class="outline-text-3" id="text-org8b67ac3">
+<div id="outline-container-orgc934554" class="outline-3">
+<h3 id="orgc934554">When should I give feedback</h3>
+<div class="outline-text-3" id="text-orgc934554">
 <p>
 Feedbacks should be given as early and often as possible, if you can give
 feedback right after noticing positive/negative behaviour that's ideal, of
@@ -529,21 +529,21 @@ like attention.</li>
 </div>
 </div>
 
-<div id="outline-container-org3b91492" class="outline-2">
-<h2 id="org3b91492">Common Questions and Resistance to Feedback</h2>
-<div class="outline-text-2" id="text-org3b91492">
+<div id="outline-container-org116fae8" class="outline-2">
+<h2 id="org116fae8">Common Questions and Resistance to Feedback</h2>
+<div class="outline-text-2" id="text-org116fae8">
 <p>
 First, ask yourself these three questions before offering feedback.
 </p>
 </div>
 
-<div id="outline-container-orgaceb3f0" class="outline-3">
-<h3 id="orgaceb3f0">The questions</h3>
-<div class="outline-text-3" id="text-orgaceb3f0">
+<div id="outline-container-org5863765" class="outline-3">
+<h3 id="org5863765">The questions</h3>
+<div class="outline-text-3" id="text-org5863765">
 </div>
-<div id="outline-container-org7e26604" class="outline-4">
-<h4 id="org7e26604">Am I angry?</h4>
-<div class="outline-text-4" id="text-org7e26604">
+<div id="outline-container-org89517c9" class="outline-4">
+<h4 id="org89517c9">Am I angry?</h4>
+<div class="outline-text-4" id="text-org89517c9">
 <blockquote>
 <p>
 If you're angry, don't give feedback. Period.
@@ -552,18 +552,18 @@ If you're angry, don't give feedback. Period.
 </div>
 </div>
 
-<div id="outline-container-orgf9c8c50" class="outline-4">
-<h4 id="orgf9c8c50">Do I want to remind or punish?</h4>
-<div class="outline-text-4" id="text-orgf9c8c50">
+<div id="outline-container-orga69f2af" class="outline-4">
+<h4 id="orga69f2af">Do I want to remind or punish?</h4>
+<div class="outline-text-4" id="text-orga69f2af">
 <p>
 Always focus in encouraging effective future behavior.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org55450c7" class="outline-4">
-<h4 id="org55450c7">Can I let it go?</h4>
-<div class="outline-text-4" id="text-org55450c7">
+<div id="outline-container-org9dcb5c7" class="outline-4">
+<h4 id="org9dcb5c7">Can I let it go?</h4>
+<div class="outline-text-4" id="text-org9dcb5c7">
 <blockquote>
 <p>
 If you can't let it go in terms of how you feel, we recommend that you do let it
@@ -573,9 +573,9 @@ go by not giving negative feedback.
 </div>
 </div>
 
-<div id="outline-container-orgc513d58" class="outline-4">
-<h4 id="orgc513d58">Maybe delay or defer?</h4>
-<div class="outline-text-4" id="text-orgc513d58">
+<div id="outline-container-orgd3c6860" class="outline-4">
+<h4 id="orgd3c6860">Maybe delay or defer?</h4>
+<div class="outline-text-4" id="text-orgd3c6860">
 <p>
 If you can't pass the three tests above, you should either <b>delay</b> or <b>defer</b>.
 </p>
@@ -590,9 +590,9 @@ again.</li>
 </div>
 </div>
 
-<div id="outline-container-org249a583" class="outline-4">
-<h4 id="org249a583">The Shot across the Bow</h4>
-<div class="outline-text-4" id="text-org249a583">
+<div id="outline-container-org2ff2f7b" class="outline-4">
+<h4 id="org2ff2f7b">The Shot across the Bow</h4>
+<div class="outline-text-4" id="text-org2ff2f7b">
 <p>
 What do I do if one of my directs pushes back or refuses feedback? If your
 direct is defensive it means they likely know they're in the wrong. Do not drag
@@ -609,9 +609,9 @@ apologize, and walk away. You've made your point.
 </div>
 </div>
 
-<div id="outline-container-org29426a5" class="outline-3">
-<h3 id="org29426a5">The capstone: systemic feedback</h3>
-<div class="outline-text-3" id="text-org29426a5">
+<div id="outline-container-org9f43634" class="outline-3">
+<h3 id="org9f43634">The capstone: systemic feedback</h3>
+<div class="outline-text-3" id="text-org9f43634">
 <blockquote>
 <p>
 Systemic feedback changes what you are talking to your direct about and raises
@@ -634,9 +634,9 @@ don't keep.
 </blockquote>
 </div>
 
-<div id="outline-container-org4034d92" class="outline-4">
-<h4 id="org4034d92">When to use it?</h4>
-<div class="outline-text-4" id="text-org4034d92">
+<div id="outline-container-org9b0177b" class="outline-4">
+<h4 id="org9b0177b">When to use it?</h4>
+<div class="outline-text-4" id="text-org9b0177b">
 <blockquote>
 <p>
 You should use systemic feedback when you have already given six instances of
@@ -647,18 +647,18 @@ has not been engaging in the behavior they've committed to.
 </div>
 </div>
 
-<div id="outline-container-org40fb72a" class="outline-4">
-<h4 id="org40fb72a">How is it different?</h4>
-<div class="outline-text-4" id="text-org40fb72a">
+<div id="outline-container-org074e65b" class="outline-4">
+<h4 id="org074e65b">How is it different?</h4>
+<div class="outline-text-4" id="text-org074e65b">
 <p>
 In systemic feedbacks you're giving feedback on <b>the failure to meet commitments</b>.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org88b6d44" class="outline-4">
-<h4 id="org88b6d44">Two dangers</h4>
-<div class="outline-text-4" id="text-org88b6d44">
+<div id="outline-container-orga5b2514" class="outline-4">
+<h4 id="orga5b2514">Two dangers</h4>
+<div class="outline-text-4" id="text-orga5b2514">
 <ol class="org-ol">
 <li>Use the standard feedback model before applying the systemic feedback</li>
 <li>Implied sanctions must be delivered</li>
@@ -668,13 +668,13 @@ In systemic feedbacks you're giving feedback on <b>the failure to meet commitmen
 </div>
 </div>
 
-<div id="outline-container-org6211a88" class="outline-2">
-<h2 id="org6211a88">How to start giving feedback</h2>
-<div class="outline-text-2" id="text-org6211a88">
+<div id="outline-container-org2b51895" class="outline-2">
+<h2 id="org2b51895">How to start giving feedback</h2>
+<div class="outline-text-2" id="text-org2b51895">
 </div>
-<div id="outline-container-org2a2f8e2" class="outline-3">
-<h3 id="org2a2f8e2">Announce your intention in your weekly staff meeting</h3>
-<div class="outline-text-3" id="text-org2a2f8e2">
+<div id="outline-container-orgce06f7b" class="outline-3">
+<h3 id="orgce06f7b">Announce your intention in your weekly staff meeting</h3>
+<div class="outline-text-3" id="text-orgce06f7b">
 <blockquote>
 <p>
 Cover the purpose of feedback talk to your directs about the purpose of giving
@@ -689,9 +689,9 @@ feedback model</li>
 </div>
 </div>
 
-<div id="outline-container-org2f6d2f1" class="outline-3">
-<h3 id="org2f6d2f1">Give only positive feedback for eigth weeks</h3>
-<div class="outline-text-3" id="text-org2f6d2f1">
+<div id="outline-container-orgf2b64c0" class="outline-3">
+<h3 id="orgf2b64c0">Give only positive feedback for eigth weeks</h3>
+<div class="outline-text-3" id="text-orgf2b64c0">
 <blockquote>
 <p>
 Don't give any negative feedback as you're learning to use the feedback
@@ -708,9 +708,9 @@ hurt the feelings of your direct.
 </div>
 </div>
 
-<div id="outline-container-org301d4bc" class="outline-3">
-<h3 id="org301d4bc">Stay as positive as you can</h3>
-<div class="outline-text-3" id="text-org301d4bc">
+<div id="outline-container-orgbe1735a" class="outline-3">
+<h3 id="orgbe1735a">Stay as positive as you can</h3>
+<div class="outline-text-3" id="text-orgbe1735a">
 <ul class="org-ul">
 <li>Don't overdo negative feedbacks</li>
 <li>Positive feedbacks are much more powerful tools than negative ones</li>
@@ -727,9 +727,9 @@ all the good behaviors.
 </div>
 </div>
 
-<div id="outline-container-org552b1a2" class="outline-2">
-<h2 id="org552b1a2">Push work down - Delegation</h2>
-<div class="outline-text-2" id="text-org552b1a2">
+<div id="outline-container-org2eb08ff" class="outline-2">
+<h2 id="org2eb08ff">Push work down - Delegation</h2>
+<div class="outline-text-2" id="text-org2eb08ff">
 <blockquote>
 <p>
 Learning to delegate is part of the transition to becoming an executive. Too
@@ -744,9 +744,9 @@ How do we know when something is a task assignment and not a delegation?
 </p>
 </div>
 
-<div id="outline-container-org100d3a5" class="outline-4">
-<h4 id="org100d3a5">Task assignment x Task delegation</h4>
-<div class="outline-text-4" id="text-org100d3a5">
+<div id="outline-container-org0e77717" class="outline-4">
+<h4 id="org0e77717">Task assignment x Task delegation</h4>
+<div class="outline-text-4" id="text-org0e77717">
 <blockquote>
 <p>
 Delegation, on the other hand, is you turning over responsibility for one of
@@ -757,13 +757,13 @@ long standing basis, to one of your directs.
 </div>
 </div>
 
-<div id="outline-container-orgbaedfea" class="outline-4">
-<h4 id="orgbaedfea">Why Delegation Is the Solution - The Delegation</h4>
+<div id="outline-container-orgf3af309" class="outline-4">
+<h4 id="orgf3af309">Why Delegation Is the Solution - The Delegation</h4>
 </div>
 
-<div id="outline-container-orgdc85181" class="outline-4">
-<h4 id="orgdc85181">Delegate the Big Black Ball</h4>
-<div class="outline-text-4" id="text-orgdc85181">
+<div id="outline-container-orgf300353" class="outline-4">
+<h4 id="orgf300353">Delegate the Big Black Ball</h4>
+<div class="outline-text-4" id="text-orgf300353">
 <ul class="org-ul">
 <li>Not a good idea, since you <b>don't</b> know how to do it, how are you going to
 help your directs to do it?</li>
@@ -779,9 +779,9 @@ your directs. Learn it first, master it, before
 </div>
 </div>
 
-<div id="outline-container-orgd7217a1" class="outline-4">
-<h4 id="orgd7217a1">Delegate One of the Big Gray Balls</h4>
-<div class="outline-text-4" id="text-orgd7217a1">
+<div id="outline-container-orgaaeffe5" class="outline-4">
+<h4 id="orgaaeffe5">Delegate One of the Big Gray Balls</h4>
+<div class="outline-text-4" id="text-orgaaeffe5">
 <blockquote>
 <p>
 One of your small balls is a big ball to your direct.
@@ -795,13 +795,13 @@ task anyway.</li>
 </div>
 </div>
 
-<div id="outline-container-org35aa744" class="outline-4">
-<h4 id="org35aa744">Delegate One or More of the Small Balls</h4>
+<div id="outline-container-orgd4140fc" class="outline-4">
+<h4 id="orgd4140fc">Delegate One or More of the Small Balls</h4>
 </div>
 
-<div id="outline-container-org01979d7" class="outline-3">
-<h3 id="org01979d7">How to Delegate—The Manager Tools Delegation Model</h3>
-<div class="outline-text-3" id="text-org01979d7">
+<div id="outline-container-org89e1da0" class="outline-3">
+<h3 id="org89e1da0">How to Delegate—The Manager Tools Delegation Model</h3>
+<div class="outline-text-3" id="text-org89e1da0">
 <ol class="org-ol">
 <li>State your desire for help</li>
 <li>Tell them why you're asking them</li>
@@ -814,7 +814,7 @@ task anyway.</li>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
