--- a/20220204231800-mandarin_chinese.html
+++ b/20220204231800-mandarin_chinese.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mandarin-chinese</title>
@@ -261,18 +261,18 @@ for the JavaScript code in this tag.
 Notes from the following courses:
 </p>
 
-<div id="outline-container-orgdbbc9d5" class="outline-2">
-<h2 id="orgdbbc9d5">Basic Mandarin</h2>
-<div class="outline-text-2" id="text-orgdbbc9d5">
+<div id="outline-container-orgf286679" class="outline-2">
+<h2 id="orgf286679">Basic Mandarin</h2>
+<div class="outline-text-2" id="text-orgf286679">
 <ul class="org-ul">
 <li><a href="https://www.coursera.org/learn/mandarin-chinese-1">Mandarin Chinese 1</a></li>
 <li>Basic Mandarin at CII</li>
 </ul>
 </div>
 
-<div id="outline-container-org17fd8b6" class="outline-3">
-<h3 id="org17fd8b6">Pictograms</h3>
-<div class="outline-text-3" id="text-org17fd8b6">
+<div id="outline-container-org03b3c77" class="outline-3">
+<h3 id="org03b3c77">Pictograms</h3>
+<div class="outline-text-3" id="text-org03b3c77">
 <table>
 
 
@@ -313,9 +313,9 @@ Notes from the following courses:
 </div>
 
 
-<div id="outline-container-org33c56f2" class="outline-3">
-<h3 id="org33c56f2">Useful words</h3>
-<div class="outline-text-3" id="text-org33c56f2">
+<div id="outline-container-org621a7b4" class="outline-3">
+<h3 id="org621a7b4">Useful words</h3>
+<div class="outline-text-3" id="text-org621a7b4">
 <table>
 
 
@@ -413,7 +413,7 @@ Notes from the following courses:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
