--- a/20230411100120-managing_a_programming_project.html
+++ b/20230411100120-managing_a_programming_project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>managing-a-programming-project</title>
@@ -258,13 +258,13 @@ for the JavaScript code in this tag.
 :ID:       da4d5031-66cb-4d1c-b8cf-24d12adf5c17
 </p>
 
-<div id="outline-container-org5809c41" class="outline-2">
-<h2 id="org5809c41">Introduction</h2>
-<div class="outline-text-2" id="text-org5809c41">
+<div id="outline-container-orgf1d95eb" class="outline-2">
+<h2 id="orgf1d95eb">Introduction</h2>
+<div class="outline-text-2" id="text-orgf1d95eb">
 </div>
-<div id="outline-container-org7f99b5a" class="outline-3">
-<h3 id="org7f99b5a">Your ground rules</h3>
-<div class="outline-text-3" id="text-org7f99b5a">
+<div id="outline-container-orgcdfd7dc" class="outline-3">
+<h3 id="orgcdfd7dc">Your ground rules</h3>
+<div class="outline-text-3" id="text-orgcdfd7dc">
 <ul class="org-ul">
 <li>Adopt a set of unambiguous definitions and stick with them</li>
 <li>Define your project's <span class="underline">development cycle</span> and related all schedules and work
@@ -275,9 +275,9 @@ process to that cycle</li>
 </div>
 </div>
 
-<div id="outline-container-orgc118bd6" class="outline-3">
-<h3 id="orgc118bd6">Your contract</h3>
-<div class="outline-text-3" id="text-orgc118bd6">
+<div id="outline-container-org9695990" class="outline-3">
+<h3 id="org9695990">Your contract</h3>
+<div class="outline-text-3" id="text-org9695990">
 <blockquote>
 <p>
 Half the horror stories about programming involve either bad contracts or no
@@ -299,9 +299,9 @@ operating results and feel a sense of satisfaction.
 </blockquote>
 </div>
 
-<div id="outline-container-org6690cb3" class="outline-4">
-<h4 id="org6690cb3">Writing your own contract</h4>
-<div class="outline-text-4" id="text-org6690cb3">
+<div id="outline-container-orgdfa1d05" class="outline-4">
+<h4 id="orgdfa1d05">Writing your own contract</h4>
+<div class="outline-text-4" id="text-orgdfa1d05">
 <ol class="org-ol">
 <li>Scope of work</li>
 <li>Schedule and deliverables</li>
@@ -317,9 +317,9 @@ operating results and feel a sense of satisfaction.
 </div>
 </div>
 
-<div id="outline-container-org11d364c" class="outline-3">
-<h3 id="org11d364c">The nature of the beast</h3>
-<div class="outline-text-3" id="text-org11d364c">
+<div id="outline-container-orgb026fde" class="outline-3">
+<h3 id="orgb026fde">The nature of the beast</h3>
+<div class="outline-text-3" id="text-orgb026fde">
 <p>
 "Why is software hard to build?"
 </p>
@@ -342,7 +342,7 @@ the needs of other systems.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
