--- a/20231005194145-algebraic_models_for_accounting_systems.html
+++ b/20231005194145-algebraic_models_for_accounting_systems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Algebraic Models for Accounting Systems</title>
@@ -283,13 +283,13 @@ for the JavaScript code in this tag.
 Algebraic Models for Accouting Systems
 </p>
 
-<div id="outline-container-org4ba1fe8" class="outline-2">
-<h2 id="org4ba1fe8">Approaches to Accounting Theory</h2>
-<div class="outline-text-2" id="text-org4ba1fe8">
+<div id="outline-container-org5ad2f11" class="outline-2">
+<h2 id="org5ad2f11">Approaches to Accounting Theory</h2>
+<div class="outline-text-2" id="text-org5ad2f11">
 </div>
-<div id="outline-container-org592b39d" class="outline-3">
-<h3 id="org592b39d">Algebraic concepts employed</h3>
-<div class="outline-text-3" id="text-org592b39d">
+<div id="outline-container-orgfa7e466" class="outline-3">
+<h3 id="orgfa7e466">Algebraic concepts employed</h3>
+<div class="outline-text-3" id="text-orgfa7e466">
 <ul class="org-ul">
 <li>Balance vectors
 <ul class="org-ul">
@@ -316,13 +316,13 @@ outputs are the new balance vectors.</li>
 </div>
 </div>
 
-<div id="outline-container-org63f5de0" class="outline-2">
-<h2 id="org63f5de0">Balance Vectors</h2>
-<div class="outline-text-2" id="text-org63f5de0">
+<div id="outline-container-org080bf20" class="outline-2">
+<h2 id="org080bf20">Balance Vectors</h2>
+<div class="outline-text-2" id="text-org080bf20">
 </div>
-<div id="outline-container-org5b8d6a3" class="outline-3">
-<h3 id="org5b8d6a3">The values of an account</h3>
-<div class="outline-text-3" id="text-org5b8d6a3">
+<div id="outline-container-org55b522f" class="outline-3">
+<h3 id="org55b522f">The values of an account</h3>
+<div class="outline-text-3" id="text-org55b522f">
 <p>
 Let there be given a set R together with two binary operations on R called
 addition and multiplication, denoted in the usual way, such that the following
@@ -370,9 +370,9 @@ a,b \in R \wedge a \times b = 0 \implies a = 0 &\lor b = 0 \tag{12}\\
 </div>
 </div>
 
-<div id="outline-container-org26d7194" class="outline-3">
-<h3 id="org26d7194">The State of an Accounting System</h3>
-<div class="outline-text-3" id="text-org26d7194">
+<div id="outline-container-orge62dad7" class="outline-3">
+<h3 id="orge62dad7">The State of an Accounting System</h3>
+<div class="outline-text-3" id="text-orge62dad7">
 <p>
 Let <b>R</b> be an <b>ordered domain</b>, which will be the universal set for all account
 values, and let n be a positive integer, which will be the number of accounts in
@@ -455,9 +455,9 @@ the additional properties (5) through (8) make R<sup>n</sup> into a .
 </p>
 </div>
 
-<div id="outline-container-org3f3a184" class="outline-4">
-<h4 id="org3f3a184">The free R-module R<sup>n</sup></h4>
-<div class="outline-text-4" id="text-org3f3a184">
+<div id="outline-container-org7aa5fbe" class="outline-4">
+<h4 id="org7aa5fbe">The free R-module R<sup>n</sup></h4>
+<div class="outline-text-4" id="text-org7aa5fbe">
 <p>
 It turns out that R<sup>n</sup> is a particular type of R-module called a Free R-module. To
 see what is special about it, consider the so-called elementary column vectors
@@ -504,9 +504,9 @@ The set of elementary vectors {e(1), . . . , e(n)} is an R-basis of R<sup>n</sup
 </div>
 </div>
 
-<div id="outline-container-orgff09596" class="outline-4">
-<h4 id="orgff09596">Balance vectors in R<sup>n</sup></h4>
-<div class="outline-text-4" id="text-orgff09596">
+<div id="outline-container-org5e1a92d" class="outline-4">
+<h4 id="org5e1a92d">Balance vectors in R<sup>n</sup></h4>
+<div class="outline-text-4" id="text-org5e1a92d">
 <p>
 The accounts of a company generally fall into three categories:
 </p>
@@ -570,14 +570,14 @@ balance module of degree n over R.
 </div>
 </div>
 
-<div id="outline-container-org6763962" class="outline-4">
-<h4 id="org6763962">Properties of the Balance Module</h4>
+<div id="outline-container-org89dada5" class="outline-4">
+<h4 id="org89dada5">Properties of the Balance Module</h4>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
