--- a/20231007165834-left_r_module.html
+++ b/20231007165834-left_r_module.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Left R-Module</title>
@@ -280,9 +280,9 @@ for the JavaScript code in this tag.
 :ID:       e4bd8f7b-a64d-4da3-b1e8-289d6fb0c441
 </p>
 
-<div id="outline-container-orgecc6261" class="outline-2">
-<h2 id="orgecc6261">Formal Definition</h2>
-<div class="outline-text-2" id="text-orgecc6261">
+<div id="outline-container-org9f7800f" class="outline-2">
+<h2 id="org9f7800f">Formal Definition</h2>
+<div class="outline-text-2" id="text-org9f7800f">
 <p>
 Suppose that R is a ring, and 1 is its multiplicative identity. A left R-module
 M consists of an abelian group (M, +) and an operation · : R × M → M such that
@@ -299,7 +299,7 @@ r \cdot (x + y) &= r \cdot x + r \cdot y \tag{1}\\
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
