--- a/20231008214945-monoid.html
+++ b/20231008214945-monoid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Monoid</title>
@@ -280,9 +280,9 @@ for the JavaScript code in this tag.
 :ID:       d89285be-d7a9-46a1-8a10-e14e73b66935
 </p>
 
-<div id="outline-container-orgc39577f" class="outline-2">
-<h2 id="orgc39577f">Definition</h2>
-<div class="outline-text-2" id="text-orgc39577f">
+<div id="outline-container-orgf85be06" class="outline-2">
+<h2 id="orgf85be06">Definition</h2>
+<div class="outline-text-2" id="text-orgf85be06">
 <p>
 A monoid is triple \(\left (\mathbb{M}, \cdot, 1 \right)\) such that:
 </p>
@@ -297,7 +297,7 @@ A monoid is triple \(\left (\mathbb{M}, \cdot, 1 \right)\) such that:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
