--- a/20211029092528-dns.html
+++ b/20211029092528-dns.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>DNS</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       f5f06bf3-d288-47a8-901f-37bec1ba50e7
 </p>
 
-<div id="outline-container-org43c4196" class="outline-2">
-<h2 id="org43c4196">Why do we need DNS?</h2>
-<div class="outline-text-2" id="text-org43c4196">
+<div id="outline-container-orge28f585" class="outline-2">
+<h2 id="orge28f585">Why do we need DNS?</h2>
+<div class="outline-text-2" id="text-orge28f585">
 <table>
 
 
@@ -290,13 +290,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org2cfb1f3" class="outline-2">
-<h2 id="org2cfb1f3">Terminology</h2>
-<div class="outline-text-2" id="text-org2cfb1f3">
+<div id="outline-container-org94e83ff" class="outline-2">
+<h2 id="org94e83ff">Terminology</h2>
+<div class="outline-text-2" id="text-org94e83ff">
 </div>
-<div id="outline-container-orgbc78694" class="outline-3">
-<h3 id="orgbc78694">Labels</h3>
-<div class="outline-text-3" id="text-orgbc78694">
+<div id="outline-container-org8dd7daa" class="outline-3">
+<h3 id="org8dd7daa">Labels</h3>
+<div class="outline-text-3" id="text-org8dd7daa">
 <table>
 
 
@@ -349,13 +349,13 @@ where TLD is an abbreviation for "Top Level Domain".
 </div>
 </div>
 
-<div id="outline-container-org40e5363" class="outline-3">
-<h3 id="org40e5363">Zones</h3>
+<div id="outline-container-org6c8e9dc" class="outline-3">
+<h3 id="org6c8e9dc">Zones</h3>
 </div>
 
-<div id="outline-container-orgdaa3ba3" class="outline-3">
-<h3 id="orgdaa3ba3">Query Types</h3>
-<div class="outline-text-3" id="text-orgdaa3ba3">
+<div id="outline-container-orgd439b11" class="outline-3">
+<h3 id="orgd439b11">Query Types</h3>
+<div class="outline-text-3" id="text-orgd439b11">
 <ul class="org-ul">
 <li>Recursive</li>
 <li>Iterative</li>
@@ -365,7 +365,7 @@ where TLD is an abbreviation for "Top Level Domain".
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
