--- a/20211201115324-gitops.html
+++ b/20211201115324-gitops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GitOps</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       e670c5d9-8238-4bf4-a916-e9ffb3097fa1
 </p>
 
-<div id="outline-container-orgd78b16c" class="outline-2">
-<h2 id="orgd78b16c">Architecture Components</h2>
-<div class="outline-text-2" id="text-orgd78b16c">
+<div id="outline-container-org249b108" class="outline-2">
+<h2 id="org249b108">Architecture Components</h2>
+<div class="outline-text-2" id="text-org249b108">
 <table>
 
 
@@ -306,13 +306,13 @@ for the JavaScript code in this tag.
 </div>
 
 
-<div id="outline-container-org42efa52" class="outline-2">
-<h2 id="org42efa52">ArgoCD</h2>
-<div class="outline-text-2" id="text-org42efa52">
+<div id="outline-container-orge306374" class="outline-2">
+<h2 id="orge306374">ArgoCD</h2>
+<div class="outline-text-2" id="text-orge306374">
 </div>
-<div id="outline-container-orgb153e67" class="outline-3">
-<h3 id="orgb153e67">Architecture</h3>
-<div class="outline-text-3" id="text-orgb153e67">
+<div id="outline-container-orge6f463a" class="outline-3">
+<h3 id="orge6f463a">Architecture</h3>
+<div class="outline-text-3" id="text-orge6f463a">
 <ul class="org-ul">
 <li><p>
 API Server
@@ -344,7 +344,7 @@ the cluster with the desired state of the Git repository.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
