--- a/20231015192823-hypermediasystems.html
+++ b/20231015192823-hypermediasystems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hypermedia Systems</title>
@@ -258,13 +258,13 @@ for the JavaScript code in this tag.
 :ID:       10d70300-3c11-48f7-af3b-d5d07d5a5f39
 </p>
 
-<div id="outline-container-org2e021c5" class="outline-2">
-<h2 id="org2e021c5">Chapter 01 - Hypermedia: A Reintroduction</h2>
-<div class="outline-text-2" id="text-org2e021c5">
+<div id="outline-container-org7984e22" class="outline-2">
+<h2 id="org7984e22">Chapter 01 - Hypermedia: A Reintroduction</h2>
+<div class="outline-text-2" id="text-org7984e22">
 </div>
-<div id="outline-container-orgc5c90f7" class="outline-3">
-<h3 id="orgc5c90f7">What Is Hypermedia?</h3>
-<div class="outline-text-3" id="text-orgc5c90f7">
+<div id="outline-container-org2d2bb23" class="outline-3">
+<h3 id="org2d2bb23">What Is Hypermedia?</h3>
+<div class="outline-text-3" id="text-org2d2bb23">
 <blockquote>
 <p>
 Hypermedia is a media, for example a text, that includes non-linear branching
@@ -275,9 +275,9 @@ in the media.
 </div>
 </div>
 
-<div id="outline-container-orgf52d5de" class="outline-3">
-<h3 id="orgf52d5de">A Brief History of Hypermedia</h3>
-<div class="outline-text-3" id="text-orgf52d5de">
+<div id="outline-container-org5cca426" class="outline-3">
+<h3 id="org5cca426">A Brief History of Hypermedia</h3>
+<div class="outline-text-3" id="text-org5cca426">
 <p>
 Where did the idea of hypermedia come from?
 </p>
@@ -290,9 +290,9 @@ Where did the idea of hypermedia come from?
 </div>
 </div>
 
-<div id="outline-container-orgeb4922e" class="outline-3">
-<h3 id="orgeb4922e">Modern Implementation</h3>
-<div class="outline-text-3" id="text-orgeb4922e">
+<div id="outline-container-org1cf3ae3" class="outline-3">
+<h3 id="org1cf3ae3">Modern Implementation</h3>
+<div class="outline-text-3" id="text-org1cf3ae3">
 <ul class="org-ul">
 <li>Tim Berners-Lee's "World Wide Web"</li>
 <li>Roy Fielding's ""</li>
@@ -300,17 +300,17 @@ Where did the idea of hypermedia come from?
 </div>
 </div>
 
-<div id="outline-container-orgf521efa" class="outline-3">
-<h3 id="orgf521efa">The World’s Most Successful Hypertext: HTML</h3>
-<div class="outline-text-3" id="text-orgf521efa">
+<div id="outline-container-org9b99491" class="outline-3">
+<h3 id="org9b99491">The World’s Most Successful Hypertext: HTML</h3>
+<div class="outline-text-3" id="text-org9b99491">
 </div>
-<div id="outline-container-org1e60c85" class="outline-4">
-<h4 id="org1e60c85">The Essence of HTML as a Hypermedia</h4>
-<div class="outline-text-4" id="text-org1e60c85">
+<div id="outline-container-org9edc399" class="outline-4">
+<h4 id="org9edc399">The Essence of HTML as a Hypermedia</h4>
+<div class="outline-text-4" id="text-org9edc399">
 </div>
-<div id="outline-container-org57e7af5" class="outline-5">
-<h5 id="org57e7af5">Anchor tags</h5>
-<div class="outline-text-5" id="text-org57e7af5">
+<div id="outline-container-orge3f69bc" class="outline-5">
+<h5 id="orge3f69bc">Anchor tags</h5>
+<div class="outline-text-5" id="text-orge3f69bc">
 <div class="org-src-container">
 <pre class="src src-html">&lt;a href="https://hypermedia.systems/"&gt;
   Hypermedia Systems
@@ -328,9 +328,9 @@ this attribute that makes the anchor tag a hypermedia control.
 </div>
 </div>
 
-<div id="outline-container-org1f48d77" class="outline-5">
-<h5 id="org1f48d77">Form tags</h5>
-<div class="outline-text-5" id="text-org1f48d77">
+<div id="outline-container-org1b0fae6" class="outline-5">
+<h5 id="org1b0fae6">Form tags</h5>
+<div class="outline-text-5" id="text-org1b0fae6">
 <div class="org-src-container">
 <pre class="src src-html">&lt;form action="/signup" method="post"&gt;
   &lt;input type="text" name="email" placeholder="Enter Email To Sign Up..."/&gt;
@@ -356,7 +356,7 @@ It is the form tag that makes Hypermedia-Driven Applications possible.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
