--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 12:42 -->
+<!-- 2024-01-19 Fri 17:59 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Stranger in a strange λ</title>
@@ -258,29 +258,29 @@ for the JavaScript code in this tag.
 <li><a href=./20231018195150-the_mother_of_all_demos.html>The Mother of All Demos</a></li>
 <li><a href=./20231018194552-as_we_may_think.html>As We May Think</a></li>
 <li><a href=./20231015192823-hypermediasystems.html>Hypermedia Systems</a></li>
-<li><a href=./20231008214945-monoid.html></a></li>
-<li><a href=./20231007182834-r_module_homomorphism.html></a></li>
+<li><a href=./20231008214945-monoid.html>Monoid</a></li>
+<li><a href=./20231007182834-r_module_homomorphism.html>R-Module Homomorphism</a></li>
 <li><a href=./20231007165834-left_r_module.html>Left R-Module</a></li>
-<li><a href=./20231007164648-commutative_ring.html></a></li>
-<li><a href=./20231007164540-abelian_group.html></a></li>
+<li><a href=./20231007164648-commutative_ring.html>Commutative Ring</a></li>
+<li><a href=./20231007164540-abelian_group.html>Abelian Group</a></li>
 <li><a href=./20231005194145-algebraic_models_for_accounting_systems.html>Algebraic Models for Accounting Systems</a></li>
-<li><a href=./20230411100120-managing_a_programming_project.html></a></li>
-<li><a href=./20220204231800-mandarin_chinese.html></a></li>
-<li><a href=./20211208202505-kubernetes_ingress.html></a></li>
-<li><a href=./20211202213813-distributed_systems.html></a></li>
-<li><a href=./20211201115324-gitops.html></a></li>
-<li><a href=./20211108165331-kubernetes_secrets.html></a></li>
-<li><a href=./20211107141903-the_effective_manager.html></a></li>
-<li><a href=./20211104221056-history_of_logic.html></a></li>
-<li><a href=./20211103202637-kubernetes_configmaps.html></a></li>
-<li><a href=./20211103110648-kubernetes_storage.html></a></li>
-<li><a href=./20211029092528-dns.html></a></li>
-<li><a href=./20211023140908-helm.html></a></li>
-<li><a href=./20211013230422-kubectl.html></a></li>
-<li><a href=./20211012215602-kubernetes.html></a></li>
+<li><a href=./20230411100120-managing_a_programming_project.html>managing-a-programming-project</a></li>
+<li><a href=./20220204231800-mandarin_chinese.html>mandarin-chinese</a></li>
+<li><a href=./20211208202505-kubernetes_ingress.html>Kubernetes-Ingress</a></li>
+<li><a href=./20211202213813-distributed_systems.html>Distributed-Systems</a></li>
+<li><a href=./20211201115324-gitops.html>GitOps</a></li>
+<li><a href=./20211108165331-kubernetes_secrets.html>Kubernetes-Secrets</a></li>
+<li><a href=./20211107141903-the_effective_manager.html>The-Effective-Manager</a></li>
+<li><a href=./20211104221056-history_of_logic.html>History-of-Logic</a></li>
+<li><a href=./20211103202637-kubernetes_configmaps.html>Kubernetes-ConfigMaps</a></li>
+<li><a href=./20211103110648-kubernetes_storage.html>Kubernetes-Storage</a></li>
+<li><a href=./20211029092528-dns.html>DNS</a></li>
+<li><a href=./20211023140908-helm.html>Helm</a></li>
+<li><a href=./20211013230422-kubectl.html>kubectl</a></li>
+<li><a href=./20211012215602-kubernetes.html>Kubernetes</a></li>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 17:59.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
